--- a/style.css
+++ b/style.css
@@ -141,8 +141,20 @@ h4 {
   .hero__subtitle {
     font-size: 22px;
     font-weight: 400;
+    margin-bottom: 10px;
   }
 
+.hero__work_title {
+  font-size: 22px;
+  font-weight: 400;
+}
+
+.hero__work_subtitle {
+  font-size: 22px;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+  
   .hero__description {
     font-size: 14px;
   }
