--- a/style.css
+++ b/style.css
@@ -83,13 +83,14 @@ h4 {
 }
 
 .hero__work_title {
-  font-size: 32px;
-  font-weight: 400;
+font-size: 22px;
+font-weight: 200;
 }
 
 .hero__work_subtitle {
-  font-size: 32px;
-  font-weight: 400;
+font-size: 22px;
+font-weight: 200;
+margin-bottom: 10px;
 }
 
 .hero__links {
