--- a/style.css
+++ b/style.css
@@ -140,6 +140,11 @@ margin-bottom: 10px;
     font-size: 28px;
     margin-bottom: 10px;
   }
+  
+  .hero__title_science {
+  font-size: 14px;
+  margin-bottom: 10px;
+  }
 
   .hero__subtitle {
     font-size: 22px;
